--- a/InteractiveWebApp.css
+++ b/InteractiveWebApp.css
@@ -11,7 +11,7 @@ body {
   min-height: 200px;
   color: #fff;
   font-family: 'Montserrat';
-  height:100vmax;
+  height: 100vmax;
 }
 
 .bars {
@@ -23,7 +23,7 @@ body {
   right: 30px;
   cursor: pointer;
   z-index: 101;
-  padding-top:9px;
+  padding-top: 9px;
 }
 
 .bar {
@@ -139,7 +139,7 @@ nav.visible li:nth-child(2) {
   box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
 }
 
-nav.visible li:nth-child(3){
+nav.visible li:nth-child(3) {
   width: 100vw;
   height: 100vw;
   top: -50vw;
@@ -149,7 +149,7 @@ nav.visible li:nth-child(3){
   box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
 }
 
-nav.visible li:last-child{
+nav.visible li:last-child {
   width: 50vw;
   height: 50vw;
   top: -25vw;
@@ -161,24 +161,24 @@ nav.visible li:last-child{
 
 nav.visible li:first-child a {
   line-height: 265vw !important;
-    text-indent: 15vw !important;
+  text-indent: 15vw !important;
 
 }
 
 nav.visible li:nth-child(2) a {
   line-height: 200vw !important;
-  text-indent:17vw !important;
+  text-indent: 17vw !important;
 }
 
 nav.visible li:nth-child(3) a {
   line-height: 137vw !important;
-    text-indent: 17vw !important;
-  
+  text-indent: 17vw !important;
+
 }
 
 nav.visible li:last-child a {
   line-height: 70vw !important;
-  text-indent:12vw !important;
+  text-indent: 12vw !important;
 }
 
 
@@ -196,8 +196,8 @@ h1 {
   text-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   text-transform: uppercase;
 
-  letter-spacing:5px;
-  padding-top:40px;
+  letter-spacing: 5px;
+  padding-top: 40px;
 }
 
 article p {
@@ -220,6 +220,7 @@ article a:hover {
   50% {
     transform: translateY(0);
   }
+
   100% {
     transform: rotate(45deg) translateY(0);
   }
@@ -229,6 +230,7 @@ article a:hover {
   50% {
     transform: translateY(0);
   }
+
   100% {
     transform: rotate(-45deg) translateY(0);
   }
@@ -238,68 +240,80 @@ article a:hover {
 @media screen and (max-width:1098px) {
 
   h1 {
-    padding-top:80px;
+    padding-top: 80px;
     font-size: 40px;
   }
 }
-.Mid-section{
-width: 100%;
-height: 100px;
-padding: 10px;
-margin-bottom: 50px;
-margin-top: 200px;
+
+.Middle{
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  margin-bottom: 50px;
+  margin-top: 200px;
 
 
 }
-.calculator-text{
-	justify-content: center;
-    align-items: center;
-	text-align: center;
-	color: #ffffff;
+
+.Calculator-Text {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
 }
-.calculator-grid {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: minmax(100px, auto) repeat(5, 60px);
-    }
-.calculator-grid button {
-      cursor: pointer;
-      font-size: 2rem;
-      border: 1px, solid #FFFFFF;
-      outline: none;
-      background-color: rbga(255, 255, 255, 0.75);
-    }
 
-      .calculator-grid button:hover {
-        background-color: #a9a9a9;
-      }
-	  .span-two {
-        grid-column: span 2;
-        color: #ff5353;
-        background-color: rgba(92, 92, 92, 0.8);
-      }
+.Calculator-Setup {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, 120px);
+  grid-template-rows: minmax(100px, auto) repeat(5, 70px);
+}
 
-      .output{
-        grid-column: 1 / -1;
-        background-color: rgba(255, 255, 255, 0.75);
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-around;
-        flex-direction: column;
-        padding: 10px;
-        word-wrap: break-word;
-        word-break: break-all;
-      }
+.Calculator-Setup button {
+  cursor: pointer;
+  font-size: 30px;
+  border: 1px, solid white;
+  outline: none;
+  background-color: rbga(255, 255, 255, 0.75);
+}
 
-      .output .previous-operand{
-        color: rgba(0, 0, 0, 0.75);
-        font-size: 1.5rem;
-      }
+.Calculator-Setup button:hover {
+  background-color: white;
+}
 
-      .output .current-operand{
-        color: rgb(0, 0, 0);
-        font-size: 2.5rem;
-      }
+.Clear-All {
+  grid-column: span 2;
+  color: #fa0909;
+  background-color: rgba(150, 150, 150, 0.8);
+}
+
+.Equals {
+  grid-column: span 1;
+  color: #000000;
+  background-color: rgba(150, 150, 150, 0.8);
+  
+}
+
+.Output {
+  grid-column: 1 / -2;
+  background-color: rgba(255, 255, 255, 0.75);
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  width: 127%;
+
+}
+
+.Output .User-Input {
+  color: rgba(0, 0, 0, 0.75);
+  font-size: 40px;
+}
+
+.Output .Outcome {
+  color: rgb(0, 0, 0);
+  font-size: 40px;
+}
