--- a/InteractiveWebApp.css
+++ b/InteractiveWebApp.css
@@ -12,10 +12,11 @@ body {
   color: #fff;
   font-family: 'Montserrat';
   height: 100vmax;
+  overflow-x: hidden;
 }
 
 .bars {
-  /*   background-color:pink; */
+
   position: absolute;
   width: 27px;
   height: 27px;
@@ -115,7 +116,7 @@ ul {
   right: -10vw;
   position: absolute;
   transition: all 1s ease-in-out;
-  background: #2979FF;
+  background: #ff7171;
   box-shadow: 0 0px 0px rgba(4, 26, 62, 0.5);
 }
 
@@ -204,6 +205,7 @@ article p {
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+/*For the little plug below = github*/
 article a {
   color: #fff;
   text-decoration: none;
@@ -215,6 +217,7 @@ article a:hover {
   opacity: .8;
 }
 
+/*Hamburger open and close affect*/
 @keyframes top-bar {
   50% {
     transform: translateY(0);
@@ -243,20 +246,26 @@ article a:hover {
     font-size: 40px;
   }
 }
-.calc-text{
-  font-size: 60px;
+
+/*Just a class name for text*/
+.calc-text {
+  font-size: 50px;
   text-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   letter-spacing: 5px;
   text-align: center;
   justify-content: center;
   align-items: center;
   padding-top: 40px;
+  margin: 50px;
 }
+
+/*Contains all content to do with the calculator*/
 .container {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 0.1;
 
 }
 
@@ -299,34 +308,28 @@ button {
   cursor: pointer;
 
 }
-button :hover{
+
+button :hover {
   box-shadow: 15px 18px 15px #000000;
   transition: 0.9s ease-in-out;
 }
-.equals{
+
+.btnToggle {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  color: #ff7171;
+  left: -220px;
+}
+
+/*Equals button CSS*/
+.equals {
   width: 190px;
   box-shadow: 6px 6px 13px #fff, 6px 6px 13px rgb(0, 0, 0, );
   background-color: #919191;
 }
 
-.container-2 {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.calc-2 {
-  box-shadow: 6px 6px 13px #fff, 6px 6px 13px rgb(0, 0, 0, .16);
-  border-radius: 1px;
-  padding: 16px;
-  display: grid;
-  grid-template-columns: repeat(4, 100px);
-  background-color: #616161;
-
-}
-
+/*Creates the space gfor the user to the equation*/
 input {
   grid-column: span 4;
   height: 70px;
@@ -339,29 +342,106 @@ input {
   color: #000000;
   border: none;
   background-color: #ecf0f3;
+}
 
+/*Learned how to hide 
+.hidden{
+  display: none !important;
+}*/
+.under {
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  bottom: 120px;
+  position: relative;
+  right: 0px;
+  z-index: -1;
+
+}
+h3 {
+  font-size: 50px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+h4 {
+  font-size: 30px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.Test{
+  display: inline-block;
+  width: 100%;
+  height: 20%;
+  column-count: 2;
+}
+.Fill-in-text{
+  font-size: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+
+
+
+footer {
+  background-color: #272727;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 30px;
+  margin-top: auto;
+  bottom: 0px;
+
+  display: flex;
+  flex-direction: column;
+  position: relative;
 
 
 
 }
 
-button {
-  box-shadow: 6px 6px 13px #fff, 6px 6px 13px rgb(0, 0, 0, );
-  background-color: #ecf0f3;
-  border: none;
-  height: 50px;
-  width: 90px;
+footer li {
+  list-style: none;
   margin: 10px;
-  font-weight: 20px;
-  cursor: pointer;
+  display: inline-block;
+}
 
+.icons a {
+  background: #ff7171;
+  color: #272727;
+  padding: 15px;
+  font-size: 20px;
+  border-radius: 100%;
+  display: flex;
 }
-button :hover{
-  box-shadow: 15px 18px 15px #000000;
-  transition: 0.9s ease-in-out;
+
+.icons a:hover {
+  color: #ffffff;
+  transition: 0.5s;
 }
-.equals-2{
-  width: 190px;
-  box-shadow: 6px 6px 13px #fff, 6px 6px 13px rgb(0, 0, 0, );
-  background-color: #919191;
+
+.menu a {
+  color: #ffffff;
+  text-transform: capitalize;
+  padding: 10px;
+}
+
+.menu a:hover {
+  color: #b3b3b3;
+  transition: 0.5s;
+}
+
+.footer-copyright {
+  background-color: #ff7171;
+  color: #ffffff;
+  padding: 15px;
+  margin-top: 30px;
+  text-transform: capitalize;
+}
+
+.footer-copyright p {
+  margin-bottom: 0px;
+
 }
