--- a/InteractiveWebApp.css
+++ b/InteractiveWebApp.css
@@ -256,7 +256,7 @@ article a:hover {
   justify-content: center;
   align-items: center;
   padding-top: 40px;
-  margin: 50px;
+  margin: 100px;
 }
 
 /*Contains all content to do with the calculator*/
@@ -363,17 +363,19 @@ h3 {
   justify-content: center;
   align-items: center;
   text-align: center;
+  height: 10%;
 }
 h4 {
   font-size: 30px;
   justify-content: center;
   align-items: center;
   text-align: center;
+  height: 5%;
 }
 .Test{
   display: inline-block;
   width: 100%;
-  height: 20%;
+  height: 15%;
   column-count: 2;
 }
 .Fill-in-text{
@@ -381,10 +383,18 @@ h4 {
   justify-content: center;
   align-items: center;
   text-align: center;
+  height: 12%;
+  margin: 50px 120px;
 }
 
-
-
+.paragraph-test-line{
+  margin: 5px 10%;
+  width: 40%;
+}
+.paragraph-test-line-2{
+  margin: 5px 10%;
+  width: 40%;
+}
 
 footer {
   background-color: #272727;
