--- a/InteractiveWebApp.css
+++ b/InteractiveWebApp.css
@@ -247,6 +247,26 @@ article a:hover {
   }
 }
 
+.clock {
+  position: relative;
+  top: 10%;
+  left: 85%;
+  transform: translateX(-50%) translateY(-50%);
+  color: #ff7171;
+  font-size: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  letter-spacing: 7px;
+ 
+
+
+}
+.centerText {
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  margin-top: 100px;
+  
+}
 /*Just a class name for text*/
 .calc-text {
   font-size: 50px;
@@ -387,7 +407,7 @@ h4 {
   display: inline-block;
   width: 100%;
   height: 15%;
-  column-count: 2;
+  column-count: 3;
 }
 .Fill-in-text{
   font-size: 20px;
@@ -396,7 +416,9 @@ h4 {
   text-align: center;
   height: 10%;
   margin: 50px 120px;
+  text-decoration: none;
 }
+
 
 .paragraph-test-line{
   margin: 5px 10%;
