--- a/InteractiveWebApp.css
+++ b/InteractiveWebApp.css
@@ -249,17 +249,31 @@ article a:hover {
 
 .clock {
   position: relative;
-  top: 10%;
-  left: 85%;
-  transform: translateX(-50%) translateY(-50%);
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+
   color: #ff7171;
   font-size: 60px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 7px;
- 
-
-
 }
+@media screen and (max-width: 900px){
+  .clock{
+    position: relative;
+    text-align: center;
+    color: #ff7171;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 7px;
+
+  }
+}  
+
+
+
+
 .centerText {
   justify-content: center;
   text-align: center;
@@ -267,6 +281,9 @@ article a:hover {
   margin-top: 100px;
   
 }
+
+  
+
 /*Just a class name for text*/
 .calc-text {
   font-size: 50px;
@@ -275,6 +292,7 @@ article a:hover {
   text-align: center;
   justify-content: center;
   align-items: center;
+  text-align: center;
   padding-top: 40px;
   margin: 100px;
 }
@@ -288,7 +306,18 @@ article a:hover {
   z-index: 0.1;
 
 }
+@media screen and (max-width: 602px){
+  .calc-text {
+    font-size: 18px;
+    text-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    letter-spacing: 5px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 
+
+  }
+}
 .calc {
   box-shadow: 6px 6px 13px #fff, 6px 6px 13px rgb(0, 0, 0, .16);
   border-radius: 1px;
@@ -402,42 +431,78 @@ h4 {
   align-items: center;
   text-align: center;
   height: 5%;
+  position: relative;
 }
-.Test{
-  display: inline-block;
-  width: 100%;
-  height: 15%;
-  column-count: 3;
-}
+
+
 .Fill-in-text{
   font-size: 20px;
   justify-content: center;
   align-items: center;
   text-align: center;
   height: 10%;
-  margin: 50px 120px;
+  margin: 50px 0px;
   text-decoration: none;
+  height: 50%;
+
+}
+
+@media screen and (max-width: 969px){
+  .Fill-in-text{
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 10%;
+    width: auto;
+    margin: 50px 0px;
+    text-decoration: none;
+  }
+}
+
+@media screen and (min-width: 763px){
+  .Fill-in-text{
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 50%;
+    width: 90%;
+    margin: 50px 0px;
+    text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 700px){
+  .Fill-in-text {
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 50%;
+    width: 90%;
+    margin: 50px 0px;
+    text-decoration: none;
+  }
+}
+
+.columns {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	margin: 5px 0;
+}
+
+.column {
+	flex: 1;
+	border: 1px solid gray;
+	margin: 2px;
+	padding: 10px;
+
+	
 }
 
 
-.paragraph-test-line{
-  margin: 5px 10%;
-  width: 40%;
-}
-.paragraph-test-line-2{
-  margin: 5px 10%;
-  width: 40%;
-}
-.break-in-between{
-  width: 100%;
-  margin-top: 180px;
-  font-size: 30px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 8%;
-
-}
 
 footer {
   background-color: #272727;
@@ -454,7 +519,11 @@ footer {
 
 
 }
-
+.break-in-between{
+  width: 100px;
+  position: relative;
+  top: 0px;
+}
 footer li {
   list-style: none;
   margin: 10px;
